# ros-bridge-labbot-demo

./: README.md  docker-compose-dual-bridge.yml  docker-compose-melodic-humble.yml  docker-compose.yml
ros1_robot/: Dockerfile
ros1_robot/src/: mock_robot.launch
ros1_robot_melodic/: Dockerfile
ros1_robot_melodic/src/: mock_robot.py
ros1_robot_noetic_backup/src/: CMakeLists.txt  mock_robot.py  package.xml
ros2_controller/: Dockerfile
ros2_controller/src/: package.xml  setup.py
ros2_controller/src/robot_controller/: __init__.py  controller_node.py  simple_web_api.py  web_api.py
ros2_controller_humble/: Dockerfile
ros2_controller_humble/src/: setup.py
ros2_controller_humble/src/robot_controller/: controller_node.py
visualization/: index.html  script.js  style.css  websocket-bridge.py
