<?xml version="1.0"?>
<package format="2">
  <name>labbot_mock</name>
  <version>1.0.0</version>
  <description>Mock robot dla demonstracji ROS1-ROS2 bridge</description>
  
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>
  
  <!-- Zależności buildtime -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Zależności runtime -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  
</package>